--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 	</div>	
 
-<script src="http://code.jquery.com/jquery-3.3.1.js"></script>
+<script src="js/jquery.min.js"></script>
 <script src="js/wow.js"></script>
 <script>
 	$(document).ready(function(){
