Modify profile section

--- a/index.html
+++ b/index.html
@@ -19,17 +19,30 @@
 			<p class="f-18 animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">Living in the present & deep thinking.</p>
 			<p class="f-18 jobTitle animated wow fadeInDown" data-wow-duration="1.1s" data-wow-delay=".6s">Web UI / UX Designer</p>
 		</div>
-		<div class="btn icon icon-outline animated wow fadeInDown" id="menu01" data-wow-duration="1.1s" data-wow-delay=".8s">
-			<img src="images/down_arrow.svg">
-		</div>
+		<button class="btn icon icon-outline animated wow fadeInDown" id="menu01" data-wow-duration="1.1s" data-wow-delay=".8s">
+			<img src="images/icons/down_arrow.svg">
+		</button>
 	</div>
 	<div class="profile" id="profile">
 		<figure>
-			<img src="images/jessica01.jpg">
-			<figcaption>
+			<img class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s" src="images/jessica01.jpg">
+			<figcaption class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
 				<h2 class="f-40">jessica wu <span class="f-32">吳姿嬋</span></h2>
-				<p class="info f-18">Hi, I'm a designer form the Taiwan. I have a hardwired desire to be better, an instinct for good design.</p>
+				<p class="info f-18">Hi, I'm a designer from Taiwan. I've been working in the design field for 8 years. My degrees are in Graphic Design. I have a hardwired desire to extended skills. I'm a self taught Web Designer.</p>
 				<p class="quote f-32">Put yourself in others' shoes for a different viewpoint.</p>
+				<div class="btnGroup">
+					<button class="btn btn-primary f-13">
+						<span>PROFILE</span>
+					</button>
+					<div class="iconGroup">
+						<button class="btn icon icon-sm icon-outline">
+							<img src="images/icons/linkedin.svg">
+						</button>
+						<button class="btn icon icon-sm icon-outline">
+							<img src="images/icons/envelopes.svg">
+						</button>
+					</div>	
+				</div>
 			</figcaption>
 		</figure>
 
