Fix style of modal

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 				</p>
 				<p class="quote f-32">
 					Put yourself in others' shoes for a different viewpoint.
+					<!-- <br> -->
+					<span class="f-16">- Atticus Finch</span>
 				</p>
 				<div class="btnGroup">
 					<button class="btn btn-primary f-13" id="myBtn">
