Add skills to modal

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 				</p>
 				<p class="quote f-32">
 					Put yourself in others' shoes for a different viewpoint.
-					<!-- <br> -->
 					<span class="f-16">- Atticus Finch</span>
 				</p>
 				<div class="btnGroup">
@@ -44,11 +43,11 @@
 						PROFILE
 					</button>
 					<div class="iconGroup">
-						<button class="btn icon icon-sm icon-outline tooltip">
+						<button class="btn icon icon-sm icon-outline tooltip" onclick="window.open('https://tw.linkedin.com/in/jessica-wu-b6964214b', '_blank')">
 							<img src="images/icons/linkedin.svg">
 							<span class="tooltip-text">Linkedin</span>
 						</button>
-						<button class="btn icon icon-sm icon-outline tooltip">
+						<button class="btn icon icon-sm icon-outline tooltip" onclick="location.href='mailto:apf059@hotmail.com'">
 							<img src="images/icons/envelopes.svg">
 							<span class="tooltip-text">Email me</span>
 						</button>
@@ -56,7 +55,7 @@
 				</div>
 			</figcaption>
 		</figure>
-		<div class="modal" id="myModal">
+		<div class="modal visible" id="myModal">
 			<div class="modal-content">
 				<div class="modal-header">
 					<p class="f-14 modal-title">PROFILE</p>
@@ -75,7 +74,7 @@
 						<div class="description">
 							<p class="f-16 jobTitle"><b>UI / UX Designer</b></p>
 							<p>
-								As a designer at Oriente, I work on projects like eStore, likestore (eCommerce platform) and CRM. Using frameworks and technologies such as Bootstrap, Vuetify and Sass, Git. 
+								As a designer at Oriente, I work on projects like CRM, eStore and likestore. Using frameworks and technologies such as Bootstrap, Vuetify, Sass and Git. 
 							</p>
 						</div>
 					</div>
@@ -118,6 +117,42 @@
 							</p>
 						</div>
 					</div>
+					<h3><i>Educations</i></h3>
+					<div class="career">
+						<div class="period">
+							<p class="f-19"><b>Jinwen University</b></p>
+							<p class="f-14">Jul 2006 - Jun 2010</p>
+							<p class="f-13 location">New Taipei City</p>
+						</div>
+						<div class="description">
+							<p class="f-16 jobTitle"><b>Visual Communication Design</b></p>
+						</div>
+					</div>
+					<div class="career">
+						<div class="period">
+							<p class="f-19"><b>Shilin High School of Commerce</b></p>
+							<p class="f-14">Jul 2003 - Jun 2006</p>
+							<p class="f-13 location">Taipei City</p>
+						</div>
+						<div class="description">
+							<p class="f-16 jobTitle"><b>Advertising Design</b></p>
+						</div>
+					</div>
+					<h3><i>Skills</i></h3>
+					<div class="list f-16">
+						<ul>
+							<li>Sketch</li>
+							<li>Zeplin</li>
+							<li>Photoshop</li>
+							<li>Illustrator</li>
+							<li>Indesign</li>
+							<li>HTML</li>
+							<li>CSS, Sass</li>
+							<li>Bootstarp</li>
+							<li>Vuetify</li>
+							<li>Git (version control)</li>
+						</ul>
+					</div>		
 				</div>
 				<div class="modal-footer"></div>
 			</div>
