--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 				</p>
 				<p class="quote f-32">
 					Put yourself in others' shoes for a different viewpoint.
-					<span class="f-16">- Atticus Finch</span>
+					<span class="f-25">- Atticus Finch</span>
 				</p>
 				<div class="btnGroup">
-					<button class="btn btn-primary f-13" id="myBtn">
+					<button class="btn btn-primary f-13" id="btnProfile">
 						PROFILE
 					</button>
 					<div class="iconGroup">
@@ -55,7 +55,7 @@
 				</div>
 			</figcaption>
 		</figure>
-		<div class="modal visible" id="myModal">
+		<div class="modal" id="modalProfile">
 			<div class="modal-content">
 				<div class="modal-header">
 					<p class="f-14 modal-title">PROFILE</p>
@@ -157,8 +157,50 @@
 				<div class="modal-footer"></div>
 			</div>
 		</div>
-		<div class="modal-backdrop"></div>
-	</div>	
+	</div>
+	<div class="projects">
+		<h2 class="f-44 animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">Projects</h2>
+		<div class="likestore">
+			<div class="info animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">
+				<h3 class="f-25">
+					likestore／
+					<span class="f-16">Visual | Graphic | Web | Backstage</span>
+				</h3>
+			</div>
+			<div class="imgGroup">
+				<div class="imgBox animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".6s">
+					<img src="images/likestore01.jpg">
+					<div class="imgMask">
+						<div class="txtBox">
+							<p class="f-25 title">likestore website</p>
+							<p class="f-16">UI / UX / Visual Design</p>
+						</div>
+					</div>
+				</div>
+				<div class="imgBox animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".6s">
+					<img src="images/likestore02.jpg">
+					<div class="imgMask">
+						<div class="txtBox">
+							<p class="f-25 title">likestore console</p>
+							<p class="f-16">UI / UX Design</p>
+						</div>
+					</div>
+
+				</div>
+				<div class="imgBox animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".6s">
+					<img src="images/likestore03.jpg">
+					<div class="imgMask">
+						<div class="txtBox">
+							<p class="f-25 title">likestore visual</p>
+							<p class="f-16">Graphic Design</p>
+						</div>
+					</div>
+
+				</div>	
+			</div>		
+		</div>
+	</div>
+	<div class="modal-backdrop"></div>
 
 <script src="js/jquery.min.js"></script>
 <script src="js/wow.js"></script>
