Add crm n funoo section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					</span>
 				</div>
 				<div class="modal-body">
-					<h3><i>Experiences</i></h3>
+					<h3><i>experiences</i></h3>
 					<div class="career">
 						<div class="period">
 							<p class="f-20"><b>Oriente</b></p>
@@ -74,7 +74,7 @@
 						<div class="description">
 							<p class="f-16 jobTitle"><b>UI / UX Designer</b></p>
 							<p>
-								As a designer at Oriente, I work on projects like CRM, eStore and likestore. Using frameworks and technologies such as Bootstrap, Vuetify, Sass and Git. 
+								As a designer at Oriente, I work on projects like CRM, likestore and eStore. Using frameworks and technologies such as Bootstrap, Vuetify, Sass and Git. 
 							</p>
 						</div>
 					</div>
@@ -117,7 +117,7 @@
 							</p>
 						</div>
 					</div>
-					<h3><i>Educations</i></h3>
+					<h3><i>educations</i></h3>
 					<div class="career">
 						<div class="period">
 							<p class="f-19"><b>Jinwen University</b></p>
@@ -138,7 +138,7 @@
 							<p class="f-16 jobTitle"><b>Advertising Design</b></p>
 						</div>
 					</div>
-					<h3><i>Skills</i></h3>
+					<h3><i>skills</i></h3>
 					<div class="list f-16">
 						<ul>
 							<li>Sketch</li>
@@ -146,6 +146,7 @@
 							<li>Photoshop</li>
 							<li>Illustrator</li>
 							<li>Indesign</li>
+							<li>RWD</li>
 							<li>HTML</li>
 							<li>CSS, Sass</li>
 							<li>Bootstarp</li>
@@ -159,12 +160,12 @@
 		</div>
 	</div>
 	<div class="projects">
-		<h2 class="f-44 animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">Projects</h2>
+		<h2 class="f-44 animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">projects</h2>
 		<div class="likestore">
 			<div class="info animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">
 				<h3 class="f-25">
 					likestore／
-					<span class="f-16">Visual | Graphic | Web | Backstage</span>
+					<span class="f-16">Visual, Graphic, UI, UX, Front-end code</span>
 				</h3>
 			</div>
 			<div class="imgGroup">
@@ -173,7 +174,7 @@
 					<div class="imgMask">
 						<div class="txtBox">
 							<p class="f-25 title">likestore website</p>
-							<p class="f-16">UI / UX / Visual Design</p>
+							<p class="f-16">UI / UX / Front-end code / RWD</p>
 						</div>
 					</div>
 				</div>
@@ -182,7 +183,7 @@
 					<div class="imgMask">
 						<div class="txtBox">
 							<p class="f-25 title">likestore console</p>
-							<p class="f-16">UI / UX Design</p>
+							<p class="f-16">UI / UX / Front-end code</p>
 						</div>
 					</div>
 
@@ -191,13 +192,60 @@
 					<img src="images/likestore03.jpg">
 					<div class="imgMask">
 						<div class="txtBox">
-							<p class="f-25 title">likestore visual</p>
-							<p class="f-16">Graphic Design</p>
+							<p class="f-25 title">likestore identify</p>
+							<p class="f-16">Visual / Graphic</p>
 						</div>
 					</div>
 
 				</div>	
 			</div>		
+		</div>
+		<div class="projectMix">
+			<div class="crm">
+				<div class="info">
+					<h3 class="f-25">
+						CRM／
+						<span class="f-16">UI, UX, Front-end code</span>
+					</h3>
+				</div>
+				<div class="imgBox">
+					<img src="images/crm.jpg">
+					<div class="imgMask">
+						<div class="txtBox">
+							<p class="f-25 title">crm console</p>
+							<p class="f-16">UI / UX / Front-end code</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="funoo">
+				<div>
+					<div class="info">
+						<h3 class="f-25">
+							funoo／ <br>
+							<span class="f-16">Visual, Graphic, UI, UX, Front-end code</span>
+						</h3>
+					</div>
+					<div class="imgBox">
+						<img src="images/funoo02.jpg">
+						<div class="imgMask">
+							<div class="txtBox">
+								<p class="f-25 title">funoo console</p>
+								<p class="f-16">UI / UX / Front-end code</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="imgBox">
+					<img src="images/funoo01.jpg">
+					<div class="imgMask">
+						<div class="txtBox">
+							<p class="f-25 title">funoo identify</p>
+							<p class="f-16">Visual / Graphic</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div class="modal-backdrop"></div>
