Add book section

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 			</div>		
 		</div>
 		<div class="projectMix">
-			<div class="crm">
+			<div class="crm animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<div class="info">
 					<h3 class="f-25">
 						CRM／
@@ -218,11 +218,11 @@
 					</div>
 				</div>
 			</div>
-			<div class="funoo">
+			<div class="funoo animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
 				<div>
 					<div class="info">
 						<h3 class="f-25">
-							funoo／ <br>
+							FunOO／ <br>
 							<span class="f-16">Visual, Graphic, UI, UX, Front-end code</span>
 						</h3>
 					</div>
@@ -242,6 +242,45 @@
 						<div class="txtBox">
 							<p class="f-25 title">funoo identify</p>
 							<p class="f-16">Visual / Graphic</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="books">
+		<h2 class="f-44 animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">books</h2>
+		<div class="bookMix">
+			<div class="taitung">
+				<div class="info">
+					<h3 class="f-25">
+						漂留台東／
+						<span class="f-16">Design cover, inside page, layout</span>
+					</h3>
+				</div>
+				<div class="imgBox">
+					<img src="images/book-taitung01.jpg">
+					<div class="imgMask">
+						<div class="txtBox">
+							<p class="f-25 title">crm console</p>
+							<p class="f-16">UI / UX / Front-end code</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="dish">
+				<div class="info">
+					<h3 class="f-25">
+						料理擺盤／
+						<span class="f-16">Design inside page, layout</span>
+					</h3>
+				</div>
+				<div class="imgBox">
+					<img src="images/book-dish01.jpg">
+					<div class="imgMask">
+						<div class="txtBox">
+							<p class="f-25 title">crm console</p>
+							<p class="f-16">UI / UX / Front-end code</p>
 						</div>
 					</div>
 				</div>
