--- a/index.html
+++ b/index.html
@@ -251,38 +251,91 @@
 	<div class="books">
 		<h2 class="f-44 animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">books</h2>
 		<div class="bookMix">
-			<div class="taitung">
-				<div class="info">
-					<h3 class="f-25">
-						漂留台東／
-						<span class="f-16">Design cover, inside page, layout</span>
-					</h3>
-				</div>
+			<div class="taitung animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<div class="imgBox">
 					<img src="images/book-taitung01.jpg">
 					<div class="imgMask">
 						<div class="txtBox">
-							<p class="f-25 title">crm console</p>
-							<p class="f-16">UI / UX / Front-end code</p>
+							<p class="f-25 title">漂留台東</p>
+							<p class="f-16">Cover / Inside page / Layout</p>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="dish">
 				<div class="info">
-					<h3 class="f-25">
-						料理擺盤／
-						<span class="f-16">Design inside page, layout</span>
+					<h3 class="f-20">
+						漂留台東／
+						<span class="f-16">Design cover, inside page, layout</span>
 					</h3>
 				</div>
+			</div>
+			<div class="dish animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<div class="imgBox">
 					<img src="images/book-dish01.jpg">
 					<div class="imgMask">
 						<div class="txtBox">
-							<p class="f-25 title">crm console</p>
-							<p class="f-16">UI / UX / Front-end code</p>
+							<p class="f-25 title">料理擺盤</p>
+							<p class="f-16">Inside page / Layout</p>
 						</div>
 					</div>
+				</div>
+				<div class="info">
+					<h3 class="f-20">
+						料理擺盤／
+						<span class="f-16">Design inside page, layout</span>
+					</h3>
+				</div>
+			</div>
+		</div>
+		<div class="bookMix">
+			<div class="single animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
+				<div class="imgBox">
+					<img src="images/book-tea01.jpg">
+					<div class="imgMask">
+						<div class="txtBox">
+							<p class="f-25 title">台茶小時代</p>
+							<p class="f-16">Inside page / Layout</p>
+						</div>
+					</div>
+				</div>
+				<div class="info">
+					<h3 class="f-20">
+						台茶小時代／
+						<span class="f-16">Inside page</span>
+					</h3>
+				</div>
+			</div>
+			<div class="single animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
+				<div class="imgBox">
+					<img src="images/book-villa01.jpg">
+					<div class="imgMask">
+						<div class="txtBox">
+							<p class="f-25 title">東南亞理想旅店</p>
+							<p class="f-16">Inside page / Layout</p>
+						</div>
+					</div>
+				</div>
+				<div class="info">
+					<h3 class="f-20">
+						東南亞旅店／
+						<span class="f-16">Inside page</span>
+					</h3>
+				</div>
+			</div>
+			<div class="quote animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".2s">
+				<div class="imgBox">
+					<img src="images/book-quote01.jpg">
+					<div class="imgMask">
+						<div class="txtBox">
+							<p class="f-25 title">大師語錄系列</p>
+							<p class="f-16">Cover / Layout</p>
+						</div>
+					</div>
+				</div>
+				<div class="info">
+					<h3 class="f-20">
+						大師語錄系列／
+						<span class="f-16">Design cover, layout</span>
+					</h3>
 				</div>
 			</div>
 		</div>
