--- a/index.html
+++ b/index.html
@@ -55,90 +55,104 @@
 				</div>
 			</figcaption>
 		</figure>
-		<div class="modal" id="modalProfile">
+		<div class="modal no-action" id="modalProfile">
 			<div class="modal-content">
 				<div class="modal-header">
-					<p class="f-14 modal-title">PROFILE</p>
+					<h3 class="f-15 modal-title">PROFILE</h3>
 					<span class="close">
 						<img src="images/icons/close.svg">
 					</span>
 				</div>
 				<div class="modal-body">
-					<h3><i>experiences</i></h3>
+					<p class="f-15 label">Work Experiences</p>
 					<div class="career">
 						<div class="period">
-							<p class="f-20"><b>Oriente</b></p>
-							<p class="f-14">Nov 2017 - Apr 2020</p>
-							<p class="f-13 location">Taipei City</p>
+							<div>
+								<p class="f-20 company">Oriente</p>
+								<p class="f-14">Nov 2017 - Apr 2020</p>
+							</div>
+							<p class="location">Taipei City</p>
 						</div>
 						<div class="description">
 							<p class="f-16 jobTitle"><b>UI / UX Designer</b></p>
-							<p>
+							<p class="f-15">
 								As a designer at Oriente, I work on projects like CRM, likestore and eStore. Using frameworks and technologies such as Bootstrap, Vuetify, Sass and Git. 
 							</p>
 						</div>
 					</div>
 					<div class="career">
 						<div class="period">
-							<p class="f-20"><b>FunCity</b></p>
-							<p class="f-14">Mar 2017 - Jan 2018</p>
-							<p class="f-13 location">Taipei City</p>
+							<div>
+								<p class="f-20 company">FunCity</p>
+								<p class="f-14">Mar 2017 - Jan 2018</p>
+							</div>
+							<p class="location">Taipei City</p>
 						</div>
 						<div class="description">
 							<p class="f-16 jobTitle"><b>Web Designer</b></p>
-							<p>
+							<p class="f-15">
 								I work on project FunOO (e-commerce platform), redesign console and improve the user experience.
 							</p>
 						</div>
 					</div>
 					<div class="career">
 						<div class="period">
-							<p class="f-20"><b>Fujidinos</b></p>
-							<p class="f-14">Dec 2015 - Jun 2016</p>
-							<p class="f-13 location">Taipei City</p>
+							<div>
+								<p class="f-20 company">Fujidinos</p>
+								<p class="f-14">Dec 2015 - Jun 2016</p>
+							</div>
+							<p class="location">Taipei City</p>
 						</div>
 						<div class="description">
 							<p class="f-16 jobTitle"><b>Web Visual Designer</b></p>
-							<p>
+							<p class="f-15">
 								Fujidinos is a online shop. I am in charge of eDM (HTML & CSS) and banner visual design.
 							</p>
 						</div>
 					</div>
 					<div class="career">
 						<div class="period">
-							<p class="f-20"><b>La Vie</b></p>
-							<p class="f-14">Jun 2013 - Apr 2015</p>
-							<p class="f-13 location">Taipei City</p>
+							<div>
+								<p class="f-20 company">La Vie</p>
+								<p class="f-14">Jun 2013 - Apr 2015</p>
+							</div>
+							<p class="location">Taipei City</p>
 						</div>
 						<div class="description">
 							<p class="f-16 jobTitle"><b>Art Editor</b></p>
-							<p>
+							<p class="f-15">
 								La Vie is a lifestyle media. I am in charge of book design and marketing visual design.
 							</p>
 						</div>
 					</div>
-					<h3><i>educations</i></h3>
+					<p class="f-15 label">Educations</p>
 					<div class="career">
 						<div class="period">
-							<p class="f-19"><b>Jinwen University</b></p>
-							<p class="f-14">Jul 2006 - Jun 2010</p>
-							<p class="f-13 location">New Taipei City</p>
+							<div>
+								<p class="f-19 company">Jinwen University</p>
+								<p class="f-14">Jul 2006 - Jun 2010</p>
+							</div>
+							<p class="location">New Taipei City</p>
 						</div>
 						<div class="description">
 							<p class="f-16 jobTitle"><b>Visual Communication Design</b></p>
+							<p class="f-15"></p>
 						</div>
 					</div>
 					<div class="career">
 						<div class="period">
-							<p class="f-19"><b>Shilin High School of Commerce</b></p>
-							<p class="f-14">Jul 2003 - Jun 2006</p>
-							<p class="f-13 location">Taipei City</p>
+							<div>
+								<p class="f-19 company">Shilin High School of Commerce</p>
+								<p class="f-14">Jul 2003 - Jun 2006</p>
+							</div>
+							<p class="location">Taipei City</p>
 						</div>
 						<div class="description">
 							<p class="f-16 jobTitle"><b>Advertising Design</b></p>
+							<p class="f-15"></p>
 						</div>
 					</div>
-					<h3><i>skills</i></h3>
+					<p class="f-15 label">Skills</p>
 					<div class="list f-16">
 						<ul>
 							<li>Sketch</li>
@@ -254,12 +268,6 @@
 			<div class="taitung animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<div class="imgBox">
 					<img src="images/book-taitung01.jpg">
-					<div class="imgMask">
-						<div class="txtBox">
-							<p class="f-25 title">漂留台東</p>
-							<p class="f-16">Cover / Inside page / Layout</p>
-						</div>
-					</div>
 				</div>
 				<div class="info">
 					<h3 class="f-20">
@@ -271,12 +279,6 @@
 			<div class="dish animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<div class="imgBox">
 					<img src="images/book-dish01.jpg">
-					<div class="imgMask">
-						<div class="txtBox">
-							<p class="f-25 title">料理擺盤</p>
-							<p class="f-16">Inside page / Layout</p>
-						</div>
-					</div>
 				</div>
 				<div class="info">
 					<h3 class="f-20">
@@ -290,12 +292,6 @@
 			<div class="single animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<div class="imgBox">
 					<img src="images/book-tea01.jpg">
-					<div class="imgMask">
-						<div class="txtBox">
-							<p class="f-25 title">台茶小時代</p>
-							<p class="f-16">Inside page / Layout</p>
-						</div>
-					</div>
 				</div>
 				<div class="info">
 					<h3 class="f-20">
@@ -307,12 +303,6 @@
 			<div class="single animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<div class="imgBox">
 					<img src="images/book-villa01.jpg">
-					<div class="imgMask">
-						<div class="txtBox">
-							<p class="f-25 title">東南亞理想旅店</p>
-							<p class="f-16">Inside page / Layout</p>
-						</div>
-					</div>
 				</div>
 				<div class="info">
 					<h3 class="f-20">
@@ -324,12 +314,6 @@
 			<div class="quote animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<div class="imgBox">
 					<img src="images/book-quote01.jpg">
-					<div class="imgMask">
-						<div class="txtBox">
-							<p class="f-25 title">大師語錄系列</p>
-							<p class="f-16">Cover / Layout</p>
-						</div>
-					</div>
 				</div>
 				<div class="info">
 					<h3 class="f-20">
