--- a/index.html
+++ b/index.html
@@ -126,23 +126,23 @@
 						</div>
 					</div>
 					<p class="f-15 label">Educations</p>
-					<div class="career">
+					<div class="career school">
 						<div class="period">
 							<div>
-								<p class="f-19 company">Jinwen University</p>
+								<p class="f-17 company">Jinwen University of Science and Technology</p>
 								<p class="f-14">Jul 2006 - Jun 2010</p>
 							</div>
 							<p class="location">New Taipei City</p>
 						</div>
 						<div class="description">
 							<p class="f-16 jobTitle"><b>Visual Communication Design</b></p>
-							<p class="f-15"></p>
+							<p class="f-15">I always reading books in the school library, deep thinking, focus on learning.</p>
 						</div>
 					</div>
-					<div class="career">
+					<div class="career school">
 						<div class="period">
 							<div>
-								<p class="f-19 company">Shilin High School of Commerce</p>
+								<p class="f-17 company">Shilin High School of Commerce</p>
 								<p class="f-14">Jul 2003 - Jun 2006</p>
 							</div>
 							<p class="location">Taipei City</p>
@@ -183,7 +183,7 @@
 				</h3>
 			</div>
 			<div class="imgGroup">
-				<div class="imgBox animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".6s">
+				<div class="imgBox animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".6s" id="btnLikeweb">
 					<img src="images/likestore01.jpg">
 					<div class="imgMask">
 						<div class="txtBox">
@@ -212,6 +212,15 @@
 					</div>
 
 				</div>	
+			</div>
+			<div class="modal" id="modalLikeweb">
+				<div class="modal-content">
+					<div class="modal-header">
+						likestore website
+					</div>
+					<div class="modal-body">123</div>
+					<div class="modal-footer"></div>
+				</div>
 			</div>		
 		</div>
 		<div class="projectMix">
@@ -324,12 +333,16 @@
 			</div>
 		</div>
 	</div>
+    <div class="footer"></div>
 	<div class="modal-backdrop"></div>
 
 <script src="js/jquery.min.js"></script>
 <script src="js/wow.js"></script>
 <script src="js/main.js"></script>
 <script>
+$(function(){ 
+	$(".footer").load("footer.html"); 
+}); 
 </script>
 
 </body>
