--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
 	<div>
 		<div class="left-col">
 			<ul class="f-17">
-				<li>Profile</li>
+				<li>About</li>
 				<li>Projects</li>
 				<li>Books</li>
 				<li>Marketing</li>
