--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 			<img src="images/icons/down_arrow.svg">
 		</button>
 	</section>
-	<div class="contentWrap">	
+	<div class="contentWrap" id="contentWrap">	
 		<nav class="stickyNav">
 			<ul>
-				<li>profile</li>
+				<li>about</li>
 				<li>projects</li>
 				<li>books</li>
 				<li>marketing</li>
