--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 	<div class="contentWrap" id="contentWrap">	
 		<nav class="stickyNav">
 			<ul>
-				<li>about</li>
-				<li>projects</li>
-				<li>books</li>
+				<li class="active"><a href="#about">about</a></li>
+				<li><a href="#projects">projects</a></li>
+				<li><a href="#books">books</a></li>
 				<li>marketing</li>
 			</ul>
 		</nav>
-		<section class="profile" id="profile">
+		<section class="profile section" id="about">
 			<figure>
 			<img class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s" src="images/jessica01.jpg">
 			<figcaption class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
@@ -182,7 +182,7 @@
 			</div>
 			</div>
 		</section>
-		<section class="projects">
+		<section class="projects section" id="projects">
 		<h2 class="f-44 animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">projects</h2>
 		<div class="likestore">
 			<div class="info animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">
@@ -280,7 +280,7 @@
 			</div>
 		</div>
 		</section>
-		<section class="books">
+		<section class="books section" id="books">
 		<h2 class="f-44 animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">books</h2>
 		<div class="bookMix">
 			<div class="taitung animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
