Modify profile modal

--- a/index.html
+++ b/index.html
@@ -73,6 +73,22 @@
 					</span>
 				</div>
 				<div class="modal-body">
+					<p class="f-15 label">Skills</p>
+					<div class="list f-16">
+						<ul>
+							<li>Sketch</li>
+							<li>Zeplin</li>
+							<li>Photoshop</li>
+							<li>Illustrator</li>
+							<li>Indesign</li>
+							<li>RWD</li>
+							<li>HTML</li>
+							<li>CSS, Sass</li>
+							<li>Bootstarp</li>
+							<li>Vuetify</li>
+							<li>Git (version control)</li>
+						</ul>
+					</div>
 					<p class="f-15 label">Work Experiences</p>
 					<div class="career">
 						<div class="period">
@@ -100,7 +116,7 @@
 						<div class="description">
 							<p class="f-16 jobTitle"><b>Web Designer</b></p>
 							<p class="f-15">
-								I work on project FunOO (e-commerce platform), redesign console and improve the user experience.
+								I work on project FunOO (eCommerce Platform), redesign console and improve the user experience.
 							</p>
 						</div>
 					</div>
@@ -145,7 +161,6 @@
 						</div>
 						<div class="description">
 							<p class="f-16 jobTitle"><b>Visual Communication Design</b></p>
-							<p class="f-15">I always reading books in the school library, deep thinking, focus on learning.</p>
 						</div>
 					</div>
 					<div class="career school">
@@ -158,25 +173,8 @@
 						</div>
 						<div class="description">
 							<p class="f-16 jobTitle"><b>Advertising Design</b></p>
-							<p class="f-15"></p>
 						</div>
 					</div>
-					<p class="f-15 label">Skills</p>
-					<div class="list f-16">
-						<ul>
-							<li>Sketch</li>
-							<li>Zeplin</li>
-							<li>Photoshop</li>
-							<li>Illustrator</li>
-							<li>Indesign</li>
-							<li>RWD</li>
-							<li>HTML</li>
-							<li>CSS, Sass</li>
-							<li>Bootstarp</li>
-							<li>Vuetify</li>
-							<li>Git (version control)</li>
-						</ul>
-					</div>		
 				</div>
 				<div class="modal-footer"></div>
 			</div>
