Add nav on mobile device

--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
 	</section>
 	<div class="contentWrap" id="contentWrap">	
 		<nav class="stickyNav">
-			<ul>
-				<li class="active"><a href="#about">about</a></li>
-				<li><a href="#projects">projects</a></li>
-				<li><a href="#books">books</a></li>
+			<button class="open-menu btn icon icon-sm icon-border-none">
+				<img src="images/icons/open_menu.svg" alt="">
+			</button>
+			<ul class="menu-mobile-hidden">
+				<li id="btn-about" class="active">about</li>
+				<li id="btn-projects">projects</li>
+				<li id="btn-books">books</li>
 				<li>marketing</li>
 			</ul>
 		</nav>
