Modify file path

--- a/footer.html
+++ b/footer.html
@@ -9,11 +9,11 @@
 			</ul>
 			<div class="contact f-14">
 				<div>
-					<img src="images/icons/envelopes.svg">
+					<img src="/images/icons/envelopes.svg">
 					<p>apf059@hotmail.com</p>
 				</div>
 				<div>
-					<img src="images/icons/linkedin.svg">
+					<img src="/images/icons/linkedin.svg">
 					<p>linkedin</p>
 				</div>
 			</div>
