--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <link rel="shortcut icon" href="images/logo/favicon-likestore.ico" type="image/png">
 <title>Jessica Wu</title>
 	
-<link rel="stylesheet" href="css/main.css">
-<link rel="stylesheet" href="css/animate.css">
+<link rel="stylesheet" href="/css/main.css">
+<link rel="stylesheet" href="/css/animate.css">
 <style>
 </style>
 </head>
@@ -20,13 +20,13 @@
 			<p class="f-18 jobTitle animated wow fadeInDown" data-wow-duration="1.1s" data-wow-delay=".6s">Web UI / UX Designer</p>
 		</div>
 		<button class="btn icon icon-outline animated wow fadeInDown" id="btnScroll" data-wow-duration="1.1s" data-wow-delay=".8s">
-			<img src="images/icons/down_arrow.svg">
+			<img src="/images/icons/down_arrow.svg">
 		</button>
 	</section>
 	<div class="contentWrap" id="contentWrap">	
 		<nav class="stickyNav">
 			<button class="open-menu btn icon icon-sm icon-border-none">
-				<img src="images/icons/open_menu.svg" alt="">
+				<img src="/images/icons/open_menu.svg" alt="">
 			</button>
 			<ul class="menu-mobile-hidden">
 				<li id="btn-about" class="active">about</li>
@@ -56,11 +56,11 @@
 					</button>
 					<div class="iconGroup">
 						<button class="btn icon icon-sm icon-outline tooltip" onclick="window.open('https://tw.linkedin.com/in/jessica-wu-b6964214b', '_blank')">
-							<img src="images/icons/linkedin.svg">
+							<img src="/images/icons/linkedin.svg">
 							<span class="tooltip-text">Linkedin</span>
 						</button>
 						<button class="btn icon icon-sm icon-outline tooltip" onclick="location.href='mailto:apf059@hotmail.com'">
-							<img src="images/icons/envelopes.svg">
+							<img src="/images/icons/envelopes.svg">
 							<span class="tooltip-text">Email me</span>
 						</button>
 					</div>	
@@ -72,7 +72,7 @@
 				<div class="modal-header">
 					<h3 class="f-15 modal-title">PROFILE</h3>
 					<span class="close">
-						<img src="images/icons/close.svg">
+						<img src="/images/icons/close.svg">
 					</span>
 				</div>
 				<div class="modal-body">
@@ -194,16 +194,18 @@
 			</div>
 			<div class="imgGroup">
 				<div class="imgBox animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".6s" id="btnLikeweb">
-					<img src="images/likestore01.jpg">
-					<div class="imgMask">
-						<div class="txtBox">
-							<p class="f-25 title">likestore website</p>
-							<p class="f-16">UI / UX / Front-end code / RWD</p>
+					<img src="/images/likestore01.jpg">
+					<a href="/work/projects/likestore-web.html">
+						<div class="imgMask">
+							<div class="txtBox">
+								<p class="f-25 title">likestore website</p>
+								<p class="f-16">UI / UX / Front-end code / RWD</p>
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 				<div class="imgBox animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".6s">
-					<img src="images/likestore02.jpg">
+					<img src="/images/likestore02.jpg">
 					<div class="imgMask">
 						<div class="txtBox">
 							<p class="f-25 title">likestore console</p>
@@ -213,7 +215,7 @@
 
 				</div>
 				<div class="imgBox animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".6s">
-					<img src="images/likestore03.jpg">
+					<img src="/images/likestore03.jpg">
 					<div class="imgMask">
 						<div class="txtBox">
 							<p class="f-25 title">likestore identify</p>
@@ -222,16 +224,7 @@
 					</div>
 
 				</div>	
-			</div>
-			<div class="modal" id="modalLikeweb">
-				<div class="modal-content">
-					<div class="modal-header">
-						likestore website
-					</div>
-					<div class="modal-body">123</div>
-					<div class="modal-footer"></div>
-				</div>
-			</div>		
+			</div>	
 		</div>
 		<div class="projectMix">
 			<div class="crm animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
@@ -286,7 +279,7 @@
 		<div class="bookMix">
 			<div class="taitung animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<div class="imgBox">
-					<img src="images/book-taitung01.jpg">
+					<img src="/images/book-taitung01.jpg">
 				</div>
 				<div class="info">
 					<h3 class="f-20">
@@ -297,7 +290,7 @@
 			</div>
 			<div class="dish animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<div class="imgBox">
-					<img src="images/book-dish01.jpg">
+					<img src="/images/book-dish01.jpg">
 				</div>
 				<div class="info">
 					<h3 class="f-20">
@@ -310,7 +303,7 @@
 		<div class="bookMix">
 			<div class="single animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<div class="imgBox">
-					<img src="images/book-tea01.jpg">
+					<img src="/images/book-tea01.jpg">
 				</div>
 				<div class="info">
 					<h3 class="f-20">
@@ -321,7 +314,7 @@
 			</div>
 			<div class="single animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<div class="imgBox">
-					<img src="images/book-villa01.jpg">
+					<img src="/images/book-villa01.jpg">
 				</div>
 				<div class="info">
 					<h3 class="f-20">
@@ -332,7 +325,7 @@
 			</div>
 			<div class="quote animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<div class="imgBox">
-					<img src="images/book-quote01.jpg">
+					<img src="/images/book-quote01.jpg">
 				</div>
 				<div class="info">
 					<h3 class="f-20">
@@ -347,12 +340,12 @@
     <section class="footer"></section>
 	<div class="modal-backdrop"></div>
 
-<script src="js/jquery.min.js"></script>
-<script src="js/wow.js"></script>
-<script src="js/main.js"></script>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/wow.js"></script>
+<script src="/js/main.js"></script>
 <script>
 $(function(){ 
-	$(".footer").load("footer.html"); 
+	$(".footer").load("/footer.html"); 
 }); 
 </script>
 
