Modify quote style

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 					</h3>
 				</div>
 			</div>
-			<div class="quote animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".2s">
+			<div class="masterQuote animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<div class="imgBox">
 					<img src="/images/book-quote01.jpg">
 				</div>
