--- a/work/projects/likestore-web.html
+++ b/work/projects/likestore-web.html
@@ -33,11 +33,14 @@
 			</figure>
 		</section>
 		<section class="section-desc">
-			<figure>
+			<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<img src="/images/likestore012.gif" alt="">
 			</figure>
-			<figure>
+			<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
 				<img src="/images/likestore013.jpg" alt="">
+				<p class="quote f-32">
+					Like your online store.
+				</p>
 			</figure>
 		</section>
 	</div>
