Add likestore demo section

--- a/footer.html
+++ b/footer.html
@@ -21,12 +21,14 @@
 		</div>
 		<div class="right-col f-13">
 			<p class="photo">
-				The photographer and the photographed:
-				<span><b>Andy Cheng ／ Babara Hsieh</b></span>
+				The photographer and the photographed: <br />
+				<span><b>Andy Cheng</b></span> ／
+				<span><b>Babara Hsieh</b></span>
 			</p>
 			<p class="psd">
-				Mockup psd created:
-				<span><b>lcd2020</b></span>
+				Mockup material created: <br />
+				<span><b><a href="https://www.freepik.com/lcd2020" target="_blank">lcd2020</a></b></span> ／ 
+				<span><b><a href="https://unsplash.com/@yasuhiroyokota" target="_blank">Yasuhiro Yokota</a></b></span>
 			</p>
 		</div>
 	</div>
