--- a/work/projects/likestore-web.html
+++ b/work/projects/likestore-web.html
@@ -7,40 +7,45 @@
 <title>Jessica Wu</title>
 	
 <link rel="stylesheet" href="/css/work.css">
-<style>
-</style>
+<link rel="stylesheet" href="/css/animate.css">
 </head>
 
 <body>	
 	<div class="workWrap">	
 		<section class="section-info">
 			<figure>
-			<figcaption class="title">
-				<h2 class="f-40">
-					likestore website
-				</h2>
-				<div class="info">
-					<h3 class="f-25">
-						<span class="f-16">UI, UX, Front-end code, RWD</span>
-					</h3>
-				</div>
-				<p class="f-18">
-					Likestore is a e-commerce platform, that empowered anyone to create their own online store with no coding skills needed.
-				</p>
-			</figcaption>
-			<img src="/images/likestore011.jpg">
+				<figcaption class="title animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<h1 class="f-40">
+						likestore website
+					</h1>
+					<div class="info">
+						<h3 class="f-25">
+							<span class="f-16">UI, UX, Front-end code, RWD</span>
+						</h3>
+					</div>
+					<p class="f-18">
+						Likestore is a e-commerce platform, that empowered anyone to create their own online store with no coding skills needed.
+					</p>
+				</figcaption>
+				<img class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/likestore011.jpg">
 			</figure>
 		</section>
 		<div class="contentWrap">
-		<section class="navigation"></section>
-		<section class="section-desc">
-			<figure>
-				<img src="/images/likestore013.jpg" alt="">
-			</figure>
-			<figure>
-				<img src="/images/likestore012.gif" alt="">
-			</figure>
-		</section>
+			<section class="navigation"></section>
+			<section class="section-desc">
+				<figure class="title animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<img src="/images/likestore013.jpg" alt="">
+				</figure>
+				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
+					<img src="/images/likestore012.gif" alt="">
+				</figure>
+			</section>
+			<section class="section-demo animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+				<figure>
+					<img src="/images/likestore014.jpg" alt="">
+				</figure>
+				
+			</section>
 		</div>
 	</div>
     <section class="footer"></section>
