Add likestore console page

--- a/index.html
+++ b/index.html
@@ -206,12 +206,14 @@
 				</div>
 				<div class="imgBox animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".6s">
 					<img src="/images/likestore02.jpg">
-					<div class="imgMask">
-						<div class="txtBox">
-							<p class="f-25 title">likestore console</p>
-							<p class="f-16">UI / UX / Front-end code</p>
+					<a href="/work/projects/likestore-console.html">
+						<div class="imgMask">
+							<div class="txtBox">
+								<p class="f-25 title">likestore console</p>
+								<p class="f-16">UI / UX / Front-end code</p>
+							</div>
 						</div>
-					</div>
+					</a>
 
 				</div>
 				<div class="imgBox animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".6s">
