--- a/footer.html
+++ b/footer.html
@@ -28,7 +28,8 @@
 			<p class="psd">
 				Mockup material created: <br />
 				<span><b><a href="https://www.freepik.com/lcd2020" target="_blank">lcd2020</a></b></span> ／ 
-				<span><b><a href="https://unsplash.com/@yasuhiroyokota" target="_blank">Yasuhiro Yokota</a></b></span>
+				<span><b><a href="https://unsplash.com/@yasuhiroyokota" target="_blank">Yasuhiro Yokota</a></b></span> ／
+				<span><b><a href="https://unsplash.com/@domenicoloia" target="_blank">Domenico Loia</a></b></span>
 			</p>
 		</div>
 	</div>
