--- a/work/projects/likestore-console.html
+++ b/work/projects/likestore-console.html
@@ -37,12 +37,15 @@
 					<img src="/images/likestore022.jpg" alt="">
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/likestore023.jpg" alt="">
+					<img src="/images/likestore023.gif" alt="">
 				</figure>
 			</section>
 			<section class="section-demo animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<figure>
-					<!-- <img src="/images/likestore014.jpg" alt=""> -->
+					<img src="/images/likestore024.jpg" alt="">
+				</figure>
+				<figure>
+					<img src="/images/likestore025.jpg" alt="">
 				</figure>
 				
 			</section>
