--- a/index.html
+++ b/index.html
@@ -218,13 +218,14 @@
 				</div>
 				<div class="imgBox animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".6s">
 					<img src="/images/likestore03.jpg">
-					<div class="imgMask">
-						<div class="txtBox">
-							<p class="f-25 title">likestore identify</p>
-							<p class="f-16">Visual / Graphic</p>
+					<a href="/work/projects/likestore-identify.html">
+						<div class="imgMask">
+							<div class="txtBox">
+								<p class="f-25 title">likestore identify</p>
+								<p class="f-16">Visual / Graphic</p>
+							</div>
 						</div>
-					</div>
-
+					</a>
 				</div>	
 			</div>	
 		</div>
