--- a/work/projects/likestore-web.html
+++ b/work/projects/likestore-web.html
@@ -27,22 +27,22 @@
 						Likestore is a e-commerce platform, that empowered anyone to create their own online store with no coding skills needed.
 					</p>
 				</figcaption>
-				<img class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/likestore011.jpg">
+				<img class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/likestore/likestore011.jpg">
 			</figure>
 		</section>
 		<div class="contentWrap">
 			<section class="navigation"></section>
 			<section class="section-desc">
 				<figure class="title animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/likestore013.jpg" alt="">
+					<img src="/images/likestore/likestore013.jpg" alt="">
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/likestore012.gif" alt="">
+					<img src="/images/likestore/likestore012.gif" alt="">
 				</figure>
 			</section>
 			<section class="section-demo animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
-				<figure>
-					<img src="/images/likestore014.jpg" alt="">
+				<figure class="border-radius">
+					<img src="/images/likestore/likestore014.jpg" alt="">
 				</figure>
 				
 			</section>
