--- a/work/projects/likestore-identify.html
+++ b/work/projects/likestore-identify.html
@@ -16,36 +16,39 @@
 			<figure>
 				<figcaption class="title animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<h1 class="f-40">
-						likestore console
+						likestore identify
 					</h1>
 					<div class="info">
 						<h3 class="f-25">
-							<span class="f-16">UI, UX, Front-end code</span>
+							<span class="f-16">Visual, Graphic</span>
 						</h3>
 					</div>
 					<p class="f-18">
 						Likestore is a e-commerce platform, that empowered anyone to create their own online store with no coding skills needed.
 					</p>
 				</figcaption>
-				<img class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/likestore/likestore021.jpg">
+				<img class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/likestore/likestore031.jpg">
 			</figure>
 		</section>
 		<div class="contentWrap">
 			<section class="navigation"></section>
-			<section class="section-desc">
+			<section class="section-desc copyright">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/likestore/likestore022.jpg" alt="">
+					<img src="/images/likestore/likestore032.jpg" alt="">
+					<figcaption>
+						<a class="f-13" href="https://www.avenuespace.com/portfolio-item/likestore-%E9%9B%BB%E5%95%86%E5%B9%B3%E5%8F%B0%E4%B8%8A%E7%B7%9A%E8%A8%98%E8%80%85%E6%9C%83/" target="_blank">photo by GO92</a>
+					</figcaption>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/likestore/likestore023.gif" alt="">
+					<img src="/images/likestore/likestore033.jpg" alt="">
 				</figure>
 			</section>
 			<section class="section-demo animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
-				<figure class="border-radius">
-					<img src="/images/likestore/likestore024.jpg" alt="">
+				<figure>
+					<img src="/images/likestore/likestore034.jpg" alt="">
 				</figure>
-				<figure class="border-radius">
-					<img src="/images/likestore/likestore025.jpg" alt="">
+				<figure>
+					<img src="/images/likestore/likestore035.jpg" alt="">
 				</figure>
 				
 			</section>
