Add funoo console page

--- a/index.html
+++ b/index.html
@@ -257,12 +257,14 @@
 					</div>
 					<div class="imgBox">
 						<img src="images/funoo02.jpg">
-						<div class="imgMask">
-							<div class="txtBox">
-								<p class="f-25 title">funoo console</p>
-								<p class="f-16">UI / UX / Front-end code</p>
+						<a href="/work/projects/funoo-console.html">
+							<div class="imgMask">
+								<div class="txtBox">
+									<p class="f-25 title">funoo console</p>
+									<p class="f-16">UI / UX / Front-end code</p>
+								</div>
 							</div>
-						</div>
+						</a>
 					</div>
 				</div>
 				<div class="imgBox">
