Add funoo identify page

--- a/index.html
+++ b/index.html
@@ -269,12 +269,14 @@
 				</div>
 				<div class="imgBox">
 					<img src="images/funoo01.jpg">
-					<div class="imgMask">
-						<div class="txtBox">
-							<p class="f-25 title">funoo identify</p>
-							<p class="f-16">Visual / Graphic</p>
+					<a href="/work/projects/funoo-identify.html">
+						<div class="imgMask">
+							<div class="txtBox">
+								<p class="f-25 title">funoo identify</p>
+								<p class="f-16">Visual / Graphic</p>
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 		</div>
