--- a/index.html
+++ b/index.html
@@ -239,12 +239,14 @@
 				</div>
 				<div class="imgBox">
 					<img src="images/crm.jpg">
-					<div class="imgMask">
-						<div class="txtBox">
-							<p class="f-25 title">crm console</p>
-							<p class="f-16">UI / UX / Front-end code</p>
+					<a href="/work/projects/crm.html">
+						<div class="imgMask">
+							<div class="txtBox">
+								<p class="f-25 title">crm console</p>
+								<p class="f-16">UI / UX / Front-end code</p>
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 			<div class="funoo animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
