Modify funoo identify images

--- a/work/projects/funoo-identify.html
+++ b/work/projects/funoo-identify.html
@@ -39,14 +39,22 @@
 					<img src="/images/funoo/funoo013.jpg" alt="">
 				</figure>
 			</section>
+			<section class="section-desc space">
+				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
+					<img src="/images/funoo/funoo017.jpg" alt="">
+				</figure>
+				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
+					<img src="/images/funoo/funoo016.jpg" alt="">
+				</figure>
+			</section>
+
 			<section class="section-demo animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<figure>
 					<img src="/images/funoo/funoo014.jpg" alt="">
 				</figure>
 				<figure>
 					<img src="/images/funoo/funoo015.jpg" alt="">
-				</figure>
-				
+				</figure>				
 			</section>
 		</div>
 	</div>
