Add book taitung page

--- a/index.html
+++ b/index.html
@@ -288,7 +288,9 @@
 		<div class="bookMix">
 			<div class="taitung animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<div class="imgBox">
-					<img src="/images/book-taitung01.jpg">
+					<a href="/work/books/book-taitung.html">
+						<img src="/images/book-taitung01.jpg">
+					</a>
 				</div>
 				<div class="info">
 					<h3 class="f-20">
