--- a/index.html
+++ b/index.html
@@ -301,7 +301,9 @@
 			</div>
 			<div class="dish animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<div class="imgBox">
-					<img src="/images/book-dish01.jpg">
+					<a href="/work/books/book-dish.html">
+						<img src="/images/book-dish01.jpg">
+					</a>
 				</div>
 				<div class="info">
 					<h3 class="f-20">
