Modify crm page

--- a/work/projects/crm.html
+++ b/work/projects/crm.html
@@ -31,12 +31,18 @@
 		</section>
 		<div class="contentWrap">
 			<section class="navigation"></section>
-			<section class="section-desc">
+			<section class="section-desc space narrow-left">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/crm/crm012.jpg" alt="">
+					<div class="dummy"></div>
+					<div class="block">
+						<img src="/images/crm.jpg" alt="">
+					</div>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/crm/crm013.gif" alt="">
+					<div class="dummy"></div>
+					<div class="block">
+						<img src="/images/crm/crm013.gif" alt="">
+					</div>
 				</figure>
 			</section>
 			<section class="section-demo animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
